# zinc

./: .dockerignore  .gitbook.yaml  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  compiler.sh  example.jab  grammar.md  interpreter.sh  osxcross_setup.sh  run.sh  syntax.md  test.sh  test.zrsb  transpiler.sh  vim.exe.stackdump  vm.sh
circuit/: Cargo.toml
circuit/src/: lib.rs  main.rs
compiler/: Cargo.toml
compiler/src/: error.rs  lib.rs  main.rs
compiler/src/executor/: error.rs  interpreter.rs  mod.rs  scope.rs  warning.rs
compiler/src/generator/: error.rs  mod.rs  writer.rs
compiler/src/interpreter/: error.rs  mod.rs  scope.rs  tests.rs  warning.rs
compiler/src/lexical/: alphabet.rs  error.rs  mod.rs  tests.rs
compiler/src/semantic/: analyzer.rs  error.rs  mod.rs
compiler/src/syntax/: error.rs  mod.rs  tests.rs
interpreter/: Cargo.toml
interpreter/src/: error.rs  interpreter.rs  lib.rs  main.rs  tests.rs
interpreter/src/element/: error.rs  mod.rs
interpreter/src/scope/: error.rs  item.rs  mod.rs  variable.rs
interpreter/src/tests/: algorithm_fibonacci.rs  array_double.rs  block_expression_pyramid.rs  conditional_expression_elseless.rs  conditional_expression_nested.rs  error_conditional_branch_type_mismatch.rs  error_conditional_expected_boolean.rs  error_element_expected_place_expression.rs  error_enumeration_variant_not_exists.rs  error_function_argument_missing.rs  error_function_argument_type_mismatch.rs  error_function_calling_not_callable.rs  error_function_return_type_mismatch.rs  error_let_implicit_casting.rs  error_let_invalid_type.rs  error_loop_while_expected_boolean.rs  error_require_expected_boolean.rs  error_require_failed.rs  error_scope_addressing_primitive_variable.rs  error_scope_array_access_as_structure.rs  error_scope_array_access_as_tuple.rs  error_scope_array_index_out_of_range.rs  error_scope_mutating_immutable.rs  error_scope_rederclared_item.rs  error_scope_structure_access_as_array.rs  error_scope_structure_access_as_tuple.rs  error_scope_structure_field_not_exists.rs  error_scope_tuple_access_as_array.rs  error_scope_tuple_access_as_structure.rs  error_scope_tuple_field_not_exists.rs  mod.rs  (+48 more)
r1cs/: Cargo.toml
r1cs/src/: lib.rs  utils.rs
schnorr/: Cargo.toml
schnorr/src/: error.rs  lib.rs  main.rs
semantic/: Cargo.toml
semantic/src/: lib.rs
zandbox/: .env  Cargo.toml  scheme.sql
zandbox/docker/: Dockerfile
zandbox/migrations/: 20201004131709_initial.sql  20201008043451_initial.sql  initial.sql
zandbox/src/: contract.rs  error.rs  lib.rs  response.rs  shared_data.rs  storage.rs  wait.rs
zandbox/test/: dec.json  inc.json  post.json
zargo/: Cargo.toml
zargo/src/: constants.rs  error.rs  http.rs  lib.rs  main.rs  manifest.rs  network.rs  templates.rs  transaction.rs
zinc-build/: Cargo.toml
zinc-build/src/: bytes.rs  lib.rs
zinc-bytecode/: Cargo.toml
zinc-bytecode/src/: builtin.rs  builtins.rs  decode.rs  lib.rs  logger.rs  panic.rs  program.rs  scalar.rs  vlq.rs
zinc-compiler/: Cargo.toml
zinc-compiler/src/: bundler.rs  bytecode.rs  error.rs  lib.rs  main.rs  panic.rs
zinc-data/: Cargo.toml
zinc-data/src/: lib.rs  network.rs  transaction.rs  utils.rs
zinc-lexical/: Cargo.toml
zinc-lexical/src/: error.rs  lib.rs  tests.rs
zinc-logger/: Cargo.toml
zinc-logger/src/: level.rs  lib.rs
zinc-manifest/: Cargo.toml
zinc-manifest/src/: error.rs  lib.rs  manifest.rs  project_type.rs
zinc-math/: Cargo.toml
zinc-math/src/: error.rs  lib.rs
zinc-mongo/: Cargo.toml
zinc-mongo/src/: client.rs  error.rs  lib.rs  storage.rs
zinc-postgres/: Cargo.toml
zinc-postgres/migrations/: default.sql
zinc-postgres/src/: client.rs  error.rs  lib.rs
zinc-project/: Cargo.toml
zinc-project/src/: error.rs  lib.rs  manifest.rs
zinc-server/: Cargo.toml
zinc-server/migrations/: initial.sql
zinc-server/src/: app_data.rs  lib.rs  panic.rs  response.rs  shared_data.rs  status.rs
zinc-server/test/: input.json  main.json  new.json
zinc-source/: Cargo.toml
zinc-source/src/: lib.rs  project.rs
zinc-tester/: Cargo.toml  accounts.sh  test.zn
zinc-tester/one-file/: unused_functions.zn
zinc-tester/src/: arguments.rs  data.rs  directory.rs  error.rs  file.rs  instance.rs  lib.rs  main.rs  panic.rs  program.rs  summary.rs
zinc-tester/tests/: algorithm_factorial.zn  algorithm_fibonacci.zn  algorithm_person_balances.zn  algorithm_sort_bubble.zn  array_init_constant_expression.zn  array_nested_store_load.zn  array_slice_lower_half.zn  array_slice_middle_half.zn  array_slice_upper_half.zn  array_store_load.zn  block_mutating.zn  block_pyramid.zn  conditional_assert.zn  conditional_elseless_mutating.zn  conditional_elseless_nested.zn  conditional_nested_gates_mutating.zn  division_witness_casted_declared_const.zn  division_witness_casted_inline_const.zn  division_witness_variable.zn  enum_different_types_enough_bitlength.zn  enum_different_types_sum.zn  expression_complex_operator.zn  expression_mixed_complex_type_access.zn  expression_mixed_item_constantness.zn  function_call_add.zn  function_call_diff.zn  function_call_index.zn  function_call_not.zn  function_call_not_equals.zn  function_call_remainder.zn  function_call_sum.zn  function_call_xor.zn  impl_enum_common_namespace.zn  loop_array_inclusive_lower_half.zn  loop_array_inclusive_middle_half.zn  loop_array_inclusive_upper_half.zn  loop_array_nested.zn  loop_array_nested_computation.zn  loop_array_reversed_inclusive_lower_half.zn  loop_array_reversed_inclusive_middle_half.zn  (+104 more)
zinc-types/: Cargo.toml
zinc-types/src/: error.rs  lib.rs  utils.rs
zinc-utils/: Cargo.toml
zinc-utils/src/: array.rs  bigint.rs  euclidean.rs  file_index.rs  lib.rs  logger.rs  panic.rs  token.rs
zinc-vm/: Cargo.toml  build.rs
zinc-vm/src/: circuit.rs  debug_constraint_system.rs  error.rs  errors.rs  facade.rs  lib.rs  panic.rs  tests.rs
zinc-zksync/: Cargo.toml
zinc-zksync/src/: lib.rs  utils.rs
zrust-vm/: Cargo.toml
zrust-vm/src/: bytecode.rs  lib.rs  operator.rs  stack.rs  vm.rs  vm_instruction.rs
(+4371 files in other folders)
