[workspace]
members = [
    "zinc-lexical",
    "zinc-syntax",
    "zinc-compiler",

    "zinc-tester",
    "zinc-vm",
    "zargo",
    "zandbox",

    "zinc-logger",
    "zinc-const",
    "zinc-math",
    "zinc-manifest",
    "zinc-source",
    "zinc-build",
    "zinc-zksync",
]

exclude = [
    "zksync"
]
