[workspace]
members = [
    # Binaries
    "zinc-compiler",
    "zinc-tester",
    "zinc-vm",
    "zargo",
    "zandbox",

    # Libraries
    "zinc-logger",
    "zinc-const",
    "zinc-lexical",
    "zinc-syntax",
    "zinc-math",
    "zinc-manifest",
    "zinc-source",
    "zinc-types",
]
