[package]
name = "compiler"
version = "0.1.0"
authors = ["hedgar2017 <hedgar2017@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.6"
structopt = "0.2"
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
num-traits = "0.2"
num-bigint = "0.2"

futures = "0.1"
actix-web = "1.0"
bytes = "0.4"

pairing = { package = "pairing_ce", version = "0.17.0" }
bellman = { package = "bellman_ce", version = "0.3.0" }
ff = { package = "ff_ce", version = "0.6.0", features = ["derive"] }
sapling-crypto = { package = "sapling-crypto_ce", version = "0.0.5" }
franklin-crypto = { git = "https://github.com/matter-labs/franklin-crypto" }
jab = { package = "jab-func", path = "../jab-func" }
