[package]
name = "compiler"
version = "0.4.0"
authors = ["hedgar2017 <hedgar2017@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7"
structopt = "0.3"
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
num-traits = "0.2"
num-bigint = "0.2"

futures = "0.1"
actix-web = "1.0"
bytes = "0.4"

r1cs = { path = "../r1cs" }
