[package]
name = "interpreter"
version = "0.4.0"
authors = ["hedgar2017 <hedgar2017@gmail.com>"]
edition = "2018"
description = "ZRust interpreter"

[[bin]]
name = "zrsi"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.7"
structopt = "0.3"
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

parser = { path = "../parser" }
semantic = { path = "../semantic" }
r1cs = { path = "../r1cs" }
