[package]
name = "r1cs"
version = "0.1.0"
authors = ["hedgar2017 <hedgar2017@gmail.com>"]
edition = "2018"

[dependencies]
bellman = { package = "bellman_ce", version = "0.3.0" }
ff = { package = "ff_ce", version = "0.6.0", features = ["derive"] }
pairing = { package = "pairing_ce", version = "0.17.0" }
sapling-crypto = { package = "sapling-crypto_ce", version = "0.0.5" }
franklin-crypto = { git = "https://github.com/matter-labs/franklin-crypto" }
