[package]
name = "schnorr"
version = "0.2.0"
authors = [
    "Alexander Movchan <am@matterlabs.dev>",
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc Schnorr signature generator"

[dependencies]
log = "0.4"
structopt = "0.3"

failure = "0.1"
colored = "1.9"
num-bigint = "0.3"
serde_json = "1.0"
rand = "0.4"
hex = "0.4"

franklin-crypto = { git = "https://github.com/matter-labs/franklin-crypto.git", branch = "zinc" }

zinc-const = { path = "../zinc-const" }
zinc-utils = { path = "../zinc-utils" }
