[package]
name = "schnorr"
version = "0.1.5-ING-4"
authors = ["Alexander Movchan <am@matterlabs.dev>"]
edition = "2018"
description = "The Zinc Schnorr signature generator"

[dependencies]
log = "0.4"
env_logger = "0.7"
structopt = "0.3.8"
failure = "0.1"
colored = "1.9.0"
num-bigint = "0.2.3"
serde_json = "1.0.44"
rand = "0.4.5"
hex = "0.4.0"

franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch = "zinc" }
