[package]
name = "semantic"
version = "0.4.0"
authors = ["hedgar2017 <hedgar2017@gmail.com>"]
edition = "2018"
description = "ZRust semantic tools shared by multiple applications"

[dependencies]
failure = "0.1"
num-traits = "0.2"
num-bigint = "0.2"

parser = { path = "../parser" }
r1cs = { path = "../r1cs" }
