[package]
name = "zandbox"
version = "0.2.0"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
edition = "2018"
description = "The Zandbox server daemon"

[[bin]]
name = "zandbox"
path = "src/zandbox/main.rs"

[[bin]]
name = "key-changer"
path = "src/key_changer/main.rs"

[dependencies]
log = "0.4"
structopt = "0.3"
colored = "2.0"
failure = "0.1"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rustc-hex = "2.1"
num = "0.3"

rayon = "1.4"
futures = "0.3"
async-std = "1.6"
actix-rt = "1.1"
actix-cors = "0.4"
actix-web = "3.1"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-async-std", "macros", "postgres", "json" ] }

zksync = { path = "../zksync/sdk/zksync-rs" }
zksync_types = { path = "../zksync/core/lib/types" }
zksync_utils = { path = "../zksync/core/lib/utils" }
zksync_eth_signer = { path = "../zksync/core/lib/eth_signer" }
num_old = { package = "num", version = "0.2.1" }

zinc-const = { path = "../zinc-const" }
zinc-utils = { path = "../zinc-utils" }
zinc-build = { path = "../zinc-build" }
zinc-data = { path = "../zinc-data" }
zinc-vm = { path = "../zinc-vm" }

[dev-dependencies]
tokio = { version = "0.2", features = [ "macros" ] }

[features]
integration-tests = []
