[package]
name = "zandbox"
version = "0.2.1"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
edition = "2018"
description = "The Zandbox server daemon"

[[bin]]
name = "zandbox"
path = "src/zandbox/main.rs"

[[bin]]
name = "key-changer"
path = "src/key_changer/main.rs"

[dependencies]
log = "0.4"
structopt = "0.3"
colored = "2.0"
anyhow = "1.0"
thiserror = "1.0"

serde = "1.0"
serde_json = "1.0"
rustc-hex = "2.1"
num = "0.3"
semver = "0.11"

rayon = "1.5"
futures = "0.3"
tokio = { version = "0.2", features = [ "macros" ] }
actix-rt = "1.1"
actix-cors = "0.5"
actix-web = "3.3"
sqlx = { version = "0.4", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "json" ] }

zksync = { git = "ssh://git@github.com/matter-labs/zksync", branch = "master" }
zksync_types = { git = "ssh://git@github.com/matter-labs/zksync", branch = "master" }
zksync_utils = { git = "ssh://git@github.com/matter-labs/zksync", branch = "master" }
zksync_eth_signer = { git = "ssh://git@github.com/matter-labs/zksync", branch = "master" }
num_old = { package = "num", version = "0.2.1" }

zinc-logger = { path = "../zinc-logger" }
zinc-const = { path = "../zinc-const" }
zinc-math = { path = "../zinc-math" }
zinc-project = { path = "../zinc-project" }
zinc-types = { path = "../zinc-types" }
zinc-vm = { path = "../zinc-vm" }
