[package]
name = "zargo"
version = "0.2.3"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc package manager"

[[bin]]
name = "zargo"
path = "src/zargo/mod.rs"

[dependencies]
log = "0.4"
structopt = "0.3"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"

serde = "1.0"
serde_json = "1.0"
num = "0.3"
rustc-hex = "2.1"
toml = "0.5"
semver = "0.11"
Inflector = "0.11"

tokio = { version = "0.2", features = [ "macros" ] }
reqwest = { version = "0.10", default-features = false, features = [ "rustls-tls" ] }
async-recursion = "0.3"

zksync = { git = "https://github.com/matter-labs/zksync", branch = "master" }
zksync_types = { git = "https://github.com/matter-labs/zksync", branch = "master" }
zksync_eth_signer = { git = "https://github.com/matter-labs/zksync", branch = "master" }
num_old = { package = "num", version = "0.2.1" }

zinc-logger = { path = "../zinc-logger" }
zinc-const = { path = "../zinc-const" }
zinc-math = { path = "../zinc-math" }
zinc-project = { path = "../zinc-project" }
zinc-types = { path = "../zinc-types" }
