[package]
name = "zinc-build"
version = "0.2.0"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
    "Alexander Movchan <am@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc build files data"

[dependencies]
log = "0.4"
failure = "0.1"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.3"

num = { version = "0.3", features = [ "serde" ] }

zksync = { path = "../zksync/sdk/zksync-rs" }

zinc-const = { path = "../zinc-const" }
zinc-utils = { path = "../zinc-utils" }
