[package]
name = "zinc-build"
version = "0.2.1"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
    "Alexander Movchan <am@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc data shared between the compiler and VM"

[dependencies]
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"

serde = "1.0"
serde_json = "1.0"
bincode = "1.3"
num = { version = "0.3", features = [ "serde" ] }

zinc-const = { path = "../zinc-const" }
zinc-lexical = { path = "../zinc-lexical" }
zinc-math = { path = "../zinc-math" }
