[package]
name = "zinc-bytecode"
version = "0.1.0"
authors = [
    "Alexander Movchan <am@matterlabs.dev>",
    "hedgar2017 <hedgar2017@gmail.com>",
]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7"
structopt = "0.3"
failure = "0.1"
num-traits = "^0.1"
num-bigint = { version = "0.2.3", features = ["serde"] }
num-integer = "0.1.41"
enum-primitive-derive = "0.1.2"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.46"
bincode = "1.2.1"
