[package]
name = "zinc-bytecode"
version = "0.1.5"
authors = [
    "Alexander Movchan <am@matterlabs.dev>",
    "hedgar2017 <hedgar2017@gmail.com>",
]
edition = "2018"
description = "The Zinc bytecode"

[dependencies]
log = "0.4"
failure = "0.1"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

enum-primitive-derive = "0.1"
bincode = "1.2"

num-traits = "0.2"
num-bigint = { version = "0.2", features = ["serde"] }
