[package]
name = "zinc-bytecode"
version = "0.1.5"
authors = [
    "Alexander Movchan <am@matterlabs.dev>",
    "Alex Z <a.zarudnyy@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc virtual machine bytecode"

[dependencies]
log = "0.4"
failure = "0.1"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.2"

num-traits = "0.2"
num-bigint = { version = "0.2", features = ["serde"] }
