[package]
name = "zinc-compiler"
version = "0.1.3"
authors = [
    "hedgar2017 <hedgar2017@gmail.com>",
    "Alexander Movchan <am@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc compiler"

[[bin]]
name = "znc"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.7"
structopt = "0.3"
failure = "0.1"
num-traits = "0.2"
num-bigint = "0.2"
serde_json = "1.0"
lazy_static = "1.4"

zinc-bytecode = { path = "../zinc-bytecode" }
