[package]
name = "zinc-compiler"
version = "0.2.0"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
    "Alexander Movchan <am@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc compiler"

[[bin]]
name = "znc"
path = "src/znc/mod.rs"

[dependencies]
log = "0.4"
structopt = "0.3"
colored = "2.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
petgraph = "0.5"

num-traits = "0.2"
num-bigint = "0.3"

zinc-const = { path = "../zinc-const" }
zinc-utils = { path = "../zinc-utils" }
zinc-data = { path = "../zinc-data" }
zinc-build = { path = "../zinc-build" }
