[package]
name = "zinc-compiler"
version = "0.2.1"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
    "Alexander Movchan <am@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc compiler"

[[bin]]
name = "znc"
path = "src/znc/mod.rs"

[dependencies]
log = "0.4"
structopt = "0.3"
thiserror = "1.0"
anyhow = "1.0"
colored = "2.0"

serde = "1.0"
serde_json = "1.0"
num = "0.3"
semver = "0.11"
lazy_static = "1.4"
petgraph = "0.5"

zinc-lexical = { path = "../zinc-lexical" }
zinc-syntax = { path = "../zinc-syntax" }
zinc-const = { path = "../zinc-const" }
zinc-math = { path = "../zinc-math" }
zinc-logger = { path = "../zinc-logger" }
zinc-project = { path = "../zinc-project" }
zinc-types = { path = "../zinc-types" }
