[package]
name = "zinc-data"
version = "0.2.0"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc common data structures"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
num-bigint = "0.3"

zksync = { git = "https://github.com/matter-labs/zksync-dev", branch = "dev" }

zinc-const = { path = "../zinc-const" }
