[package]
name = "zinc-data"
version = "0.2.0"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc common data structures"

[dependencies]
failure = "0.1"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rustc-hex = "2.1"

zksync = { path = "../zksync/sdk/zksync-rs" }
zksync_types = { path = "../zksync/core/lib/types" }
num_old = { package = "num", version = "0.2.1" }

zinc-utils = { path = "../zinc-utils" }
zinc-const = { path = "../zinc-const" }
