[package]
name = "zinc-lexical"
version = "0.2.1"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc compiler lexical analyzer"

[dependencies]
log = "0.4"
lazy_static = "1.4"

zinc-const = { path = "../zinc-const" }
zinc-math = { path = "../zinc-math" }
