[package]
name = "zinc-manifest"
version = "0.2.1"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc project manifest file"

[dependencies]
anyhow = "1.0"

toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
semver = { version = "0.11", features = [ "serde" ] }

zinc-const = { path = "../zinc-const" }
