[package]
name = "zinc-mongo"
version = "0.1.5"
authors = ["hedgar2017 <hedgar2017@gmail.com>"]
edition = "2018"
description = "The Zinc Mongo asynchronous library"

[dependencies]
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
bson = "1.0"

num-traits = "0.2"
num-bigint = "0.3"

futures = "0.3"
mongodb = "1.0"

zinc-const = { path = "../zinc-const" }
zinc-bytecode = { path = "../zinc-bytecode" }
