[package]
name = "zinc-postgres"
version = "0.1.5"
authors = ["hedgar2017 <hedgar2017@gmail.com>"]
edition = "2018"
description = "The Zinc PostgreSQL asynchronous library"

[dependencies]
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-async-std", "macros", "postgres", "json" ] }

zinc-const = { path = "../zinc-const" }
zinc-bytecode = { path = "../zinc-bytecode" }
