[package]
name = "zinc-source"
version = "0.2.1"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc source code representation"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"

serde = "1.0"

zinc-manifest = { path = "../zinc-manifest" }
zinc-const = { path = "../zinc-const" }
