[package]
name = "zinc-tester"
version = "0.2.0"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc integration test runner"

[[bin]]
name = "zinc-tester"
path = "src/zinc-tester/main.rs"

[dependencies]
structopt = "0.3"
failure = "0.1"
colored = "2.0"

serde = "1.0"
serde_json = "1.0"

rayon = "1.4"

zinc-const = { path = "../zinc-const" }
zinc-manifest = { path = "../zinc-manifest" }
zinc-compiler = { path = "../zinc-compiler" }
zinc-zksync = { path = "../zinc-zksync" }
zinc-build = { path = "../zinc-build" }
zinc-vm = { path = "../zinc-vm" }
