[package]
name = "zinc-tester"
version = "0.2.1"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc integration test runner"

[[bin]]
name = "zinc-tester"
path = "src/zinc-tester/main.rs"

[dependencies]
structopt = "0.3"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"

serde = "1.0"
serde_json = "1.0"
num = "0.3"

rayon = "1.5"

zinc-const = { path = "../zinc-const" }
zinc-manifest = { path = "../zinc-manifest" }
zinc-compiler = { path = "../zinc-compiler" }
zinc-types = { path = "../zinc-types" }
zinc-vm = { path = "../zinc-vm" }
