[package]
name = "zinc-tester"
version = "0.2.3"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc integration test runner"

[[bin]]
name = "zinc-tester"
path = "src/zinc-tester/main.rs"

[dependencies]
structopt = "0.3"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"

serde = "1.0"
serde_json = "1.0"
semver = "0.11"
num = "0.3"

tokio = "1.8"
rayon = "1.5"

zksync = { git = "https://github.com/matter-labs/zksync", branch = "master" }
zksync_types = { git = "https://github.com/matter-labs/zksync", branch = "master" }

zinc-const = { path = "../zinc-const" }
zinc-project = { path = "../zinc-project" }
zinc-compiler = { path = "../zinc-compiler" }
zinc-types = { path = "../zinc-types" }
zinc-vm = { path = "../zinc-vm" }
zinc-logger =  { path = "../zinc-logger" }

zargo = { path = "../zargo" }
