[package]
name = "zinc-types"
version = "0.2.1"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
    "Alexander Movchan <am@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc shared types"

[dependencies]
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"

serde = "1.0"
serde_json = "1.0"
rustc-hex = "2.1"
bincode = "1.3"
num = { version = "0.3", features = [ "serde" ] }
semver = "0.11"

zksync = { git = "ssh://git@github.com/matter-labs/zksync", branch = "master" }
zksync_types = { git = "ssh://git@github.com/matter-labs/zksync", branch = "master" }
zksync_eth_signer = { git = "ssh://git@github.com/matter-labs/zksync", branch = "master" }
num_old = { package = "num", version = "0.2.1" }

zinc-project = { path = "../zinc-project" }
zinc-const = { path = "../zinc-const" }
zinc-lexical = { path = "../zinc-lexical" }
zinc-math = { path = "../zinc-math" }
