[package]
name = "zinc-utils"
version = "0.2.0"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
    "Alexander Movchan <am@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc common utilities"

[dependencies]
log = "0.4"
failure = "0.1"
env_logger = "0.7"
colored = "1.9"

num-bigint = "0.3"
num-traits = "0.2"

zinc-const = { path = "../zinc-const" }
