[package]
name = "zinc-utils"
version = "0.2.0"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
    "Alexander Movchan <am@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc common utilities"

[dependencies]
log = "0.4"
env_logger = "0.7"
colored = "2.0"
failure = "0.1"
lazy_static = "1.4"
num = "0.3"

zinc-const = { path = "../zinc-const" }
