[package]
name = "zinc-vm"
version = "0.2.0"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
    "Alexander Movchan <am@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc virtual machine"

[[bin]]
name = "zvm"
path = "src/zvm/mod.rs"

[dependencies]
log = "0.4"
structopt = "0.3"

failure = "0.1"
colored = "1.9"
serde_json = "1.0"

lazy_static = "1.4"
rand = "0.4"
hex = "0.4"
sha2 = "0.9"

num-bigint = "0.3"
num-traits = "0.2"

franklin-crypto = { git = "https://github.com/matter-labs/franklin-crypto.git", branch = "zinc" }

zinc-const = { path = "../zinc-const" }
zinc-utils = { path = "../zinc-utils" }
zinc-build = { path = "../zinc-build" }

[dev-dependencies]
env_logger = "0.7"
