[package]
name = "zinc-vm"
version = "0.2.1"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
    "Alexander Movchan <am@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc virtual machine"

[[bin]]
name = "zvm"
path = "src/zvm/mod.rs"

[dependencies]
log = "0.4"
structopt = "0.3"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"

serde_json = "1.0"
lazy_static = "1.4"
rand = "0.4"
hex = "0.4"
sha2 = "0.9"
num = "0.3"

franklin-crypto = { git = "https://github.com/matter-labs/franklin-crypto.git", branch = "zinc" }

zinc-const = { path = "../zinc-const" }
zinc-math = { path = "../zinc-math" }
zinc-logger = { path = "../zinc-logger" }
zinc-zksync = { path = "../zinc-zksync" }
zinc-build = { path = "../zinc-build" }
