[package]
name = "zinc-vm"
version = "0.2.3"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
    "Alexander Movchan <am@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc virtual machine"

[[bin]]
name = "zvm"
path = "src/zvm/mod.rs"

[dependencies]
log = "0.4"
structopt = "0.3"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"

serde_json = "1.0"
lazy_static = "1.4"
semver = "0.11"
rand = "0.4"
hex = "0.4"
sha2 = "0.9"
num = "0.3"

sqlx = { version = "0.4", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "json" ] }

zksync = { git = "https://github.com/matter-labs/zksync", branch = "master" }
zksync_types = { git = "https://github.com/matter-labs/zksync", branch = "master" }
franklin-crypto = { git = "https://github.com/matter-labs/franklin-crypto.git", branch = "zinc" }

zinc-const = { path = "../zinc-const" }
zinc-math = { path = "../zinc-math" }
zinc-logger = { path = "../zinc-logger" }
zinc-types = { path = "../zinc-types" }
zinc-project = { path = "../zinc-project" }
