[package]
name = "zinc-zksync"
version = "0.2.0"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
edition = "2018"
description = "The zkSync data wrappers for Zinc"

[dependencies]
failure = "0.1"
serde = "1.0"
serde_json = "1.0"
rustc-hex = "2.1"
num = "0.3"

zksync = { path = "../zksync/sdk/zksync-rs" }
zksync_types = { path = "../zksync/core/lib/types" }
zksync_eth_signer = { path = "../zksync/core/lib/eth_signer" }
num_old = { package = "num", version = "0.2.1" }

zinc-build = { path = "../zinc-build" }
zinc-math = { path = "../zinc-math" }
zinc-const = { path = "../zinc-const" }
